tooling/nargo_cli/tests/compile_failure/dup_trait_implementation_5/src/module4.nr
// another module in the crate implements the same trait + struct
// a Duplicate error should be thrown
impl crate::module1::MyTrait for crate::module2::MyStruct { }
